# bird-species-classification-py

./: README.md  bird-species-classification.ipynb  bird_species_classification_v25.ipynb  pyproject.toml
src/: reproducibility.py
src/data/: loader.py
src/utils/: visualize.py
