[project]
name = "bird-species-classification"
version = "0.1.0"
description = "Bird species image classification tool for environmental monitoring platform"
authors = [
    {name = "berberberk",email = "pedchenkoti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
tensorflow = "2.18.0"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0"
seaborn = "^0.12.2"
keras-preprocessing = "^1.1.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
